文面の変更と軽い説明を追加

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>タイトル</title>
   </head>
   <body>
-    <h1>this is test.どうも、メロンパンです。そのうち更新しますのでもうしばらくお待ちを。</h1>
+    <h1>Meronpan</h1>
+    <h3>プログラマー。C++,C,Python等を主に利用。灰コーダー。そのうち脱却します。多分。</h3>
   </body>
 </html>
 
